syntax = "proto3";

package todopb;
option go_package = "/todopb";

message Todo {
    string id = 1;
    string text = 2;
    bool done = 3;
    string user_id = 4; // User ID to whom this todo belongs
}

message CreateTodoRequest {
    Todo todo = 1;
}

message CreateTodoResponse {
    string response = 1;
}

message GetTodosRequest {
    string user_id = 1; // Optional: filter todos by user ID
}

message GetTodosResponse {
    repeated Todo todos = 1; // List of todos
}

service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
    rpc GetTodos(GetTodosRequest) returns (GetTodosResponse);
}